--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "V2Ray",
-    "description": "Deploy V2ray VLESS on Heroku.",
+    "name": "hz",
+    "description": "hz",
     "keywords": ["V2Ray"],
     "env": {
         "ID": {
             "description": "UUID",
-            "value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
+            "value": "e3e10fb9-e463-4473-822c-c99f8cf010c2"
         },
         "WSPATH": {
             "description": "WebSocket Path",
@@ -13,6 +13,6 @@
         }
     },
     "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
-    "repository": "https://github.com/b2u8q2/test/tree/vless",
+    "repository": "https://github.com/b2u8q2/hz/tree/vless",
     "stack": "container"
 }
