--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
             "value": "/"
         }
     },
-    "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
-    "repository": "https://github.com/b2u8q2/hz",
+    "website": "",
+    "repository": "",
     "stack": "container"
 }
